[package]
name = "pipepiper"
description = "Utility that is designed to transmit data using UNIX pipes across the internet."
repository = "https://github.com/Zorlin/pipepiper"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ppr"
path = "src/main.rs"

[dependencies]
