[package]
name = "pipepiper"
description = "Utility that is designed to transmit data using UNIX pipes across the internet."
repository = "https://github.com/Zorlin/pipepiper"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ppr"
path = "src/main.rs"

[dependencies]
argwerk = "0.20.4"
bytes = "1.4.0"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
quinn = "0.10.1"
rcgen = "0.10.0"
rustls = {version = "0.21.1", features = ["quic", "dangerous_configuration"]}
simple-eyre = "0.3.1"
tokio = { version = "1.28.1", features = ["full"] }
